# educational-project

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  update.sh
examples/c_printf_helloworld/: c_printf_helloworld  c_printf_helloworld.c
examples/cpp_iostream_helloworld/: cpp_iostream_helloworld
examples/native_helloworld/: native_helloworld  native_helloworld.asm
source/: CMakeLists.txt  emulator.cpp  emulator.hpp  main.cpp  main.hpp  reader.cpp  reader.hpp
source/backend/: CMakeLists.txt
source/backend/audio/: CMakeLists.txt
source/backend/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  disasm.cpp  disasm.hpp  registers.cpp  registers.hpp  vm.cpp  vm.hpp
source/backend/graphics/: CMakeLists.txt  gfxwindow.cpp  gfxwindow.hpp  gpu.cpp  gpu.hpp  graphics.cpp  graphics.hpp
source/backend/graphics/drivers/: CMakeLists.txt  opengl.cpp  opengl.hpp
source/backend/graphics/windows/: CMakeLists.txt  winapiwindow.cpp  winapiwindow.hpp
source/backend/kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp
source/backend/memory/: CMakeLists.txt  memory.cpp  memory.hpp
source/elf/: elf32.cpp  elf32.hpp  elf64.cpp  elf64.hpp
source/gui/: window.cpp  window.hpp
source/utils/: logger.cpp  logger.hpp
